--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Bosoo Meat Shop *or other heading</h1>
 </div>
 
-<div><p></p></div>
+<div padding-30><p>Text, pics and other stuff go here</p></div>
 
 
 </body></html>
